--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,16 @@ h3 {
 }
 
 .btn {
-    padding-top: 15px;
+    padding-top: 10px;
     padding-left: 25px;
     padding-right: 25px;
     color: #fff;
     border: none;
     border-radius: 50px;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    text-align: center;
 }
 
 .btn-danger {
