--- a/css/style.css
+++ b/css/style.css
@@ -28,15 +28,6 @@ h2 {
     text-align: left;
 }
 
-h3 {
-    color: #fff;
-    font-size: 20px;
-    font-weight: bolder;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    text-align: center;
-
-}
-
 .container {
     flex: 1;
 }
@@ -51,12 +42,15 @@ h3 {
     border-radius: 5px;
     color: #ddd;
     padding-bottom: 75px;
-}
+    padding-top: 25px;
+    text-align: center;
+    width: 100%;
+    height: auto;
+
+ }
 
 .btn {
-    padding-top: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 10px 25px 10px 25px;
     color: #fff;
     border: none;
     border-radius: 50px;
@@ -66,7 +60,7 @@ h3 {
     text-align: center;
 }
 
-.btn-danger {
+.btn-info {
     background-color: #c71c30;
 }
 
